--- a/frontend/src/components/ImageSlider/index.css
+++ b/frontend/src/components/ImageSlider/index.css
@@ -8,29 +8,27 @@
 }
 
 .pictures-details{
-    width: 350px;
-    height: 250px;
-    border: 1px solid rgba(0, 0, 0, 0.33);
+    width: 100%;
+    max-width: 350px;
+    height: auto;
     background: rgba(235, 235, 235, 0.38);
     display: flex;
-    justify-content: flex-start;
+    gap:50px;
     align-items: center;
     white-space: nowrap;
-    overflow-x: hidden;
+    overflow: auto;
     scroll-snap-type: x mandatory;
+    padding: 0px 10px 0px 10px;
 }
 
-.add-scroll-x{
-    overflow-x: auto;
+.pictures-details::-webkit-scrollbar{
+    display: none;
 }
+
 .pictures-details img{
-    width: 350px !important;
+    width: 100%;
     height: 100%;
-    min-width: 350px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    object-fit: contain;
+    object-fit: cover;
     mix-blend-mode: multiply;
     background-blend-mode: multiply;
     scroll-snap-align: center;
@@ -59,19 +57,4 @@
     width: 9px;
     height: 9px;
     border: none;
-}
-
-@media (max-width: 400px) {
-    .carousel{
-        width: 300px;
-    }
-    .pictures-details{
-        width: 300px;
-        height: 180px;
-    }
-    .pictures-details img{
-        width: 100%;
-        height: 100%;
-        min-width: 300px;
-    }
 }
