--- a/frontend/src/store_pages/pagesStyles/ProductDetail.css
+++ b/frontend/src/store_pages/pagesStyles/ProductDetail.css
@@ -1,3 +1,21 @@
 .product-detail-page{
     min-height: 90vh;
 }
+
+.product-detail-page .product-detail-page-button-go-back{
+    border-radius: 15px;
+    padding: 5px 20px 5px 20px;
+    background-color: #D9658F;
+    border: 0;
+    color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5%;
+}
+
+@media (max-width:1100px){
+    .product-detail-page .product-detail-page-button-go-back{
+        margin-left: 2%;
+    }
+}
