--- a/frontend/src/components/RetryQueryComponent/index.css
+++ b/frontend/src/components/RetryQueryComponent/index.css
@@ -1,16 +1,23 @@
-.categories-list-message-error{
+.retry-query-component{
     width: 100%;
-    height: 100%;
-    max-height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-weight: bold;
     text-align: center;
-    gap:15px
+    gap:15px;
+
+    color: #000;
+    font-family: "Poppins-Regular";
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 1px;
 }
 
-.categories-list-message-error button{
-    padding: 5px;
+.retry-query-component button{
+    padding: 10px 15px 10px 15px;
+    border-radius: 20px;
+    background-color: #D9658F;
+    color:#fff;
+    border:0
 }
