--- a/frontend/src/store_pages/pagesStyles/Page404.css
+++ b/frontend/src/store_pages/pagesStyles/Page404.css
@@ -1,24 +1,25 @@
 .page-404 {
   width: 100%;
-  height: 88vh;
-  font-family: Noto Sans;
+  position: absolute;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  font-family: "Lora-Regular";
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
-  gap: 0;
+  gap: 10px;
   padding: 5rem 0;
 }
 
 .page-404 .message-container {
   background-color: white;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   color: #545454;
-  font-weight: bold;
     font-size: 2rem;
     gap: 10px;
 }
@@ -27,9 +28,10 @@
     font-size: 1.5rem; 
 }
 
-.page-404 div{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap:10px
+.page-404 button{
+    padding: 10px 15px 10px 15px;
+    border-radius: 20px;
+    background-color: #D9658F;
+    color:#fff;
+    border:0
 }
