--- a/frontend/src/components/Loaders/PageLoader/index.css
+++ b/frontend/src/components/Loaders/PageLoader/index.css
@@ -1,6 +1,6 @@
 .page-loader{
     width: 100%;
-    min-height: 80vh;
+    height: 100vh;
     background-color: #fff;
     z-index: 999;
     display: flex;
