--- a/frontend/src/components/ProductDetailPageComponents/SimilarProductsSection/index.css
+++ b/frontend/src/components/ProductDetailPageComponents/SimilarProductsSection/index.css
@@ -1,5 +1,6 @@
 .similar-products-section{
     margin: 0 auto;
+    position: relative;
 }
 .similar-products-section > header{
     text-align: center;
@@ -12,6 +13,7 @@
     letter-spacing: 0.9px;
 }
 .similar-products-section > section{
+    min-height: 300px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 250px);
     justify-content: center;
