--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import App from '@/App';
 import Footer from "@/components/Footer/index.jsx";
+import PageLoader from '@/components/Loaders/PageLoader';
 ---
 
 <Layout>
