--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -7,6 +7,7 @@ import PageLoader from '@/components/Loaders/PageLoader';
 
 <Layout>
 	<main style = "min-height:91vh">
+		<PageLoader id = {"page-loader"}/>
 		<App client:only="react"/>
 	</main>
 	<Footer />
