--- a/frontend/src/components/Loaders/PageLoader/index.css
+++ b/frontend/src/components/Loaders/PageLoader/index.css
@@ -8,3 +8,19 @@
     align-items: center;
     justify-content: center;
 }
+
+.page-loader > section {
+    animation: palpitar 3s linear infinite;
+}
+
+@keyframes palpitar {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
