--- a/frontend/src/components/ManagmentComponents/CategoriesManagement/ButtonsAddAndDelete/index.css
+++ b/frontend/src/components/ManagmentComponents/CategoriesManagement/ButtonsAddAndDelete/index.css
@@ -6,3 +6,16 @@
     justify-content: center;
     margin-bottom:10px;
 }
+
+.management-filters-bar-button{
+    height: 35px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(84, 84, 84, 1)!important;
+    color: #fff;
+    gap:10px;
+    padding:5px 10px!important;
+  }
