--- a/frontend/src/components/ManagmentComponents/PromotionsManagementComponents/PromotionsGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/PromotionsManagementComponents/PromotionsGrid/index.css
@@ -16,8 +16,8 @@
 .promotions-management-grid .promotion-management-card{
     width: 100%;
     height: 100%;
-    background-color: red;
     display: grid;
+    background-color: #fff;
     grid-template-columns: 1fr;
     grid-template-rows: 50% 30% 20%;
     grid-template-areas: 
@@ -26,6 +26,7 @@
     "action-buttons";
     gap:10px;
     position: relative;
+    box-shadow: 1px 1px 3px rgb(202, 201, 201);
 }
 
 .promotion-management-card > header{
