--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/DeleteMultipleElementsButton/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/DeleteMultipleElementsButton/index.css
@@ -1,8 +1,3 @@
-.remove-product-button-container{
-    height: 35px;
-    grid-area: delete-products;
-}
-
 .products-management-filters-bar-button{
     height: 35px;
     width: 100%;
@@ -26,15 +21,15 @@
     display: none;
 }
   
-.confirm-cancel-multiple-products-deletion-container.show {
+.confirm-cancel-multiple-products-deletion-container.show-buttons {
     display: flex;
-    animation: show 0.3s 0s forwards ;
+    animation: show-buttons 0.3s 0s forwards ;
 }
-.confirm-cancel-multiple-products-deletion-container.hide {
-    animation: hide 0.3s forwards ;
+.confirm-cancel-multiple-products-deletion-container.hide-buttons {
+    animation: hide-buttons 0.3s forwards ;
 }
 
-@keyframes hide {
+@keyframes hide-buttons {
     from{
         display: flex;
         opacity: 1;
@@ -47,7 +42,7 @@
     }
 }
 
-@keyframes show {
+@keyframes show-buttons {
     from{
         opacity: 0;
         transform: translate(-50%, 100%);
