--- a/frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesGrid/index.css
@@ -3,7 +3,7 @@
     height: 100%;
     min-height:60vh;
     display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 300px));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 250px));
     gap: 20px;
     justify-content: center;
     align-items:start;
@@ -40,7 +40,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    object-fit: contain;
+    object-fit: cover;
     mix-blend-mode: multiply;
     background-blend-mode: multiply;
   }
@@ -88,7 +88,7 @@
 
 @media (max-width:650px){
     .categories-management-grid{
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(135px, 1fr));
         gap:10px
     }
 }
