--- a/frontend/src/components/ManagmentComponents/PromotionsManagementComponents/PromotionForm/index.css
+++ b/frontend/src/components/ManagmentComponents/PromotionsManagementComponents/PromotionForm/index.css
@@ -5,13 +5,17 @@
     gap: 10px;
 }
 
-.category-form-field{
+.promotion-form-field{
     display: flex;
     gap:10px;
     align-items: center;
 }
 
-.category-form-field input{
+.promotion-form-field label{
+    width: 150px;
+}
+
+.promotion-form-field input{
     width: 100%;
 }
 
@@ -20,18 +24,30 @@
     background:rgba(84, 84, 84, 1);
 }
 
-.category-image-field img{
+.promotion-image-field img{
     width:100px;
     height: 70px;
     border-radius: 5px;
     object-fit: cover;
 }
 
+.promotion-description-field{
+    display: flex;
+    flex-direction: column;
+}
+.promotion-description-field textarea{
+    min-width: 100%;
+    max-width: 280px;
+    min-height: 100px;
+    border: 1px solid gray;
+    background: rgba(234, 229, 229, 0.17);
+}
+
 @media (max-width : 500px) {
-    .category-image-field{
+    .promotion-image-field{
         flex-direction: column;
     }
-    .category-image-field img{
+    .promotion-image-field img{
         width: 50%;
         height: auto;
     }
