--- a/frontend/src/components/HomePageComponents/Promotions/index.css
+++ b/frontend/src/components/HomePageComponents/Promotions/index.css
@@ -30,12 +30,12 @@
 }
 
 .homepage-promotions-section .cards-container{
-    display: grid;
-    grid-template-columns: repeat(3, 250px);
-    justify-content: center;
-    gap:20px;
     width: 100%;
     height: 400px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 250px);
+    justify-content: center;
+    gap:20px;
     overflow: hidden;
     padding: 0px 0px 20px 0px;
 }
@@ -61,7 +61,7 @@
 
 @media (min-width:680px) and (max-width: 850px){
     .homepage-promotions-section .cards-container{
-        grid-template-columns: repeat(3, 200px);
+        grid-template-columns: repeat(auto-fit, 200px);
         height: auto;
         min-height: 400px;
     }
@@ -69,7 +69,7 @@
 
 @media (min-width:550px) and (max-width:680px){
     .homepage-promotions-section .cards-container{
-        grid-template-columns: repeat(3, 150px);
+        grid-template-columns: repeat(auto-fit, 150px);
         height: auto;
         min-height: 300px;
     }
@@ -80,7 +80,7 @@
 
 @media (max-width: 550px){
     .homepage-promotions-section .cards-container{
-        grid-template-columns: repeat(3, minmax(80px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
         height: auto;
         min-height: 250px;
         gap: 10px;
