--- a/frontend/src/components/NavBar/NavbarDropdown/index.css
+++ b/frontend/src/components/NavBar/NavbarDropdown/index.css
@@ -12,7 +12,7 @@
 
 .user-navbar-actions-dropdown-panel{
     margin-top: 10px;
-    height: 500px;
+    height: auto;
 }
 
 .user-navbar-actions-dropdown-panel .p-dropdown-items-wrapper{
