--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
@@ -1,86 +1,94 @@
-.products-management-filters-bar{
-    width: 90%;
-    overflow: hidden;
-    display: grid;
-    grid-template-columns:1fr repeat(5, auto);
-    gap:10px;
-    margin: 0 auto;
-    grid-template-areas: 
-        "search filters add-products add-product-to-category add-product-to-promotion delete-products";
-    
-    color: #FFF;
-    text-align: center;
-    font-family: "Noto Sans";
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 125%; /* 15px */
-    font-variant: small-caps;    
+.products-management-filters-bar {
+  width: 90%;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr repeat(5, auto);
+  gap: 10px;
+  margin: 0 auto;
+  grid-template-areas: "search filters add-products delete-products add-product-to-category add-product-to-promotion remove-products-category remove-products-promotion";
+
+  color: #fff;
+  text-align: center;
+  font-family: "Noto Sans";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 125%; /* 15px */
+  font-variant: small-caps;
 }
 
-.search-container{
-    width: 100%;
-    grid-area: search;
+.search-container {
+  width: 100%;
+  grid-area: search;
 }
 
-.search-container form{
-    height: 35px;
+.search-container form {
+  height: 35px;
 }
 
-.products-management-filters-bar-button{
-    height: 35px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(84, 84, 84, 1)!important;
-    color: #fff;
-    gap:10px;
-    padding:5px 10px!important;
-    outline: none;
+.products-management-filters-bar-button {
+  height: 35px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(84, 84, 84, 1) !important;
+  color: #fff;
+  gap: 10px;
+  padding: 5px 10px !important;
+  outline: none;
 }
-.filters-modal-button-container{
-    height: 35px;
-    grid-area: filters;
+.filters-modal-button-container {
+  height: 35px;
+  grid-area: filters;
 }
-.add-product-button-container{
-    height: 35px;
-    grid-area: add-products;
+.add-product-button-container {
+  height: 35px;
+  grid-area: add-products;
 }
-.products-management-filters-bar .add-products-to-category-button-container{
-    grid-area:add-product-to-category
+.products-management-filters-bar .add-products-to-category-button-container {
+  grid-area: add-product-to-category;
 }
-.products-management-filters-bar .add-products-to-promotion-button-container{
-    grid-area:add-product-to-promotion
+.products-management-filters-bar .add-products-to-promotion-button-container {
+  grid-area: add-product-to-promotion;
 }
-.products-management-filters-bar .delete-products-container{
-    grid-area: delete-products;
+.products-management-filters-bar .delete-products-container {
+  grid-area: delete-products;
 }
-
-@media (max-width:1000px){
-    .products-management-filters-bar{
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-areas: 
-        "search search search search search"
-        "filters add-products add-product-to-category add-product-to-promotion delete-products";
-    }
+.products-management-filters-bar .remove-products-category {
+  grid-area: remove-products-category;
+}
+.products-management-filters-bar .remove-products-promotion {
+  grid-area: remove-products-promotion;
 }
 
-@media (max-width: 700px) {
-    .products-management-filters-bar-button img{
-        width:18px;
-        height:20px;
-    }
-    .products-management-filters-bar{
-        grid-template-columns: repeat(3, auto);
-        grid-template-areas: 
-        "search search search"
-        "filters add-products delete-products"
-        "add-product-to-category add-product-to-promotion add-product-to-promotion";
-    }
+@media (max-width: 1500px) {
+  .products-management-filters-bar {
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-areas:
+      "search search search search search search search"
+      "filters add-products add-product-to-category add-product-to-promotion delete-products remove-products-category remove-products-promotion";
+  }
+}
 
-    .products-management-filters-bar-button span{
+@media (max-width: 900px) {
+  .products-management-filters-bar-button img {
+    width: 18px;
+    height: 20px;
+  }
+  .products-management-filters-bar {
+    grid-template-columns: repeat(3, auto);
+    grid-template-areas:
+      "search search search"
+      "filters add-products delete-products"
+      "add-product-to-category add-product-to-category add-product-to-category"
+      "add-product-to-promotion add-product-to-promotion add-product-to-promotion"
+      "remove-products-category remove-products-promotion remove-products-promotion";
+  }
+}
+
+@media (max-width:500px){
+    .products-management-filters-bar-button span {
         display: none;
-    }
+      }
 }
-
